Always run set to true

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,5 +3,6 @@
     description: Formats code in Google's Java codestyle.
     entry: ./format-code.sh
     language: script
-    
+    always_run: true
+
 
